--- a/vignettes/ChIPQC.Rnw
+++ b/vignettes/ChIPQC.Rnw
@@ -275,7 +275,10 @@ An optional \Rcode{blacklist} is a file or \Robject{GRanges} object with genomic
 Use of blacklists can be very important in ChIP-seq data processing (\cite{Blacklist}), and should be applied for peak calling as well.
 
 For this example, some other features of \Rfunction{ChIPQC} are used as well. By setting \Rcode{consensus=TRUE}, a consensus peak set will be derived,so that even the control samples can be compared to determine their relative enrichment in these regions. With \Rcode{bCounts=TRUE}, the peak scores will be computed by counting how many reads overlap these regions for every sample (include controls). 
-This feature relies on the \Rfunction{dba.count} of the \Biocpkg{DiffBind} package. By passing an extra parameter, \Rcode{summits=250}, through to \Rfunction{dba.count}, the peaks will include 250 basepairs upstream and downstream of the peak summit. 
+This feature relies on the \Rfunction{dba.count} of the \Biocpkg{DiffBind} package. 
+By passing an extra parameter, \Rcode{summits=250}, 
+through to \Rfunction{dba.count}, the peaks will include 250 basepairs 
+upstream and downstream of the peak summit. 
 
 <<tamConstruct, eval=FALSE, keep.source=TRUE>>=
 data(blacklist_hg19)
@@ -284,7 +287,12 @@ tamoxifen = ChIPQC(samples, consensus=TRUE, bCount=TRUE, summits=250,
                    blacklist = blacklist.hg19)
 tamoxifen
 @
-Note that only the sample sheet actually needed to be specified; by default, if the \Rcode{annotation} parameter is missing, it will default to "hg19", while a missing \Rcode{chromosomes} parameter will result in the first chromosome that has peak being examined (in this case there re only peaks for "chr18", so that would be the default), and if the "hg19" is used, and the blacklist is missing, it will default to the one supplied with the package.
+Note that only the sample sheet actually needed to be specified; by default, 
+if the \Rcode{annotation} parameter is missing, it will default to "hg19", 
+while a missing \Rcode{chromosomes} parameter will result in the first chromosome that has peak being
+examined (in this case there re only peaks for "chr18", so that would be the default),
+and if the "hg19" is used, and the blacklist is missing, it will default to the 
+one supplied with the package.
 
 For the purposes of this vignette, we can load a pre-computed version of this object:
 
